# bambu-connect

./: .env-example  .gitignore  README.md  pyproject.toml  requirements.txt
bambu_connect/: BambuClient.py  CameraClient.py  ExecuteClient.py  FileClient.py  WatchClient.py  __init__.py
bambu_connect/utils/: models.py
examples/: camera_stream.py  download_timelapse.py  file_list_and_gcode.py  printer_stream.py
