[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bambu-connect"
version = "0.1.0"
description = "Connect with your bambu printer to send and receive mqtt messages and view the Camera"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Matt Carroll", email = "mwcarroll12@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["paho-mqtt"]
